# SDWMP2

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  ndk_decoder.cpp  ndk_decoder.h  oboe_audio_engine.cpp  oboe_audio_engine.h  oboe_bridge.cpp
app/src/main/res/drawable/: bg_album_cover.xml  bg_atmosphere_gradient.xml  bg_bubble.xml  bg_cassette_body.xml  bg_cassette_window.xml  bg_dialog_rounded.xml  bg_floating_player.xml  bg_folder_count.xml  bg_format_tag.xml  bg_gradient_overlay.xml  bg_icon_blue.xml  bg_icon_gold.xml  bg_icon_green.xml  bg_icon_orange.xml  bg_icon_purple.xml  bg_index_bubble.xml  bg_item_playing.xml  bg_item_selected.xml  bg_lyric_dark_overlay.xml  bg_menu_item.xml  bg_menu_item_delete.xml  bg_mini_cover_clip.xml  bg_mini_overlay.xml  bg_mini_play_btn.xml  bg_mini_player.xml  bg_mini_player_breathing.xml  bg_mini_player_dynamic.xml  bg_pink_overlay.xml  bg_playlist_cover.xml  bg_radial_gradient_overlay.xml  bg_search_rounded.xml  bg_smart_tile.xml  bg_song_item_ripple.xml  bg_tag_default.xml  bg_tag_dev.xml  bg_tag_gold.xml  bg_tag_gold_glow.xml  bg_tag_pink_glow.xml  bg_tag_purple.xml  bg_tag_purple_glow.xml  (+68 more)
app/src/main/res/layout/: widget_music_player_3x2.xml  widget_music_player_4x1.xml  widget_music_player_4x2.xml  widget_preview_3x2.xml  widget_preview_4x1.xml
benchmark/: build.gradle.kts
benchmark/src/main/: AndroidManifest.xml
(+72 files in other folders)
